router_macro/tests/ui/consecutive_slashes.stderr
error: Consecutive '/' is not allowed
 --> tests/ui/consecutive_slashes.rs:4:19
  |
4 |     let _ = path!("/////foo///bar/////baz/");
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^
